[package]
name = "intermediate_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_access = "0.1.9"

# Cargo has default settings for each of the profiles that apply when you haven't explicitly added any [profile.*] sections in the project’s Cargo.toml file
# By adding [profile.*] sections for any profile you want to customize, you override any subset of the default settings
# For example, here are the default values for the opt-level setting for the dev and release profiles:
#
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
#
# The opt-level setting controls the number of optimizations Rust will apply to your code, with a range of 0 to 3
# Applying more optimizations extends compiling time, so if you’re in development and compiling your code often,
# you’ll want fewer optimizations to compile faster even if the resulting code runs slower
# The default opt-level for dev is therefore 0. When you’re ready to release your code, it’s best to spend more time compiling
# You’ll only compile in release mode once, but you’ll run the compiled program many times,
# so release mode trades longer compile time for code that runs faster
# That is why the default opt-level for the release profile is 3
#
# For the full list of configuration options and defaults for each profile, see:
# https://doc.rust-lang.org/cargo/reference/profiles.html
